--- a/give-feedback-popup.html
+++ b/give-feedback-popup.html
@@ -1,4 +1,4 @@
-<div class="popup give-feedback-popup">
+<div class="popup give-feedback-popup popap-templ">
     <div class="popup-body">
         <div class="popup__close"></div>
         <h2 class="popup__title">ЗАЛИШИТИ ВІДГУК</h2><a class="back-link">Назад </a>
@@ -25,7 +25,7 @@
                 <option value="Светлана Светленко">Светлана Светленко</option>
             </select>
             <div class="form-rate required">
-                <div class="tutors-card__rate"><i class="mentors__star fa-solid fa-star"></i><i
+                <div class="tutors-card__rate" data-stars="1"><i class="mentors__star fa-solid fa-star"></i><i
                         class="mentors__star fa-regular fa-star"></i><i class="mentors__star fa-regular fa-star"></i><i
                         class="mentors__star fa-regular fa-star"></i><i class="mentors__star fa-regular fa-star"></i>
                 </div>
@@ -40,3 +40,5 @@
         </form>
     </div>
 </div>
+<script src="js/star.js"></script>
+<script src="js/nice-select2.js"></script>
