--- a/feedback-popup.html
+++ b/feedback-popup.html
@@ -5,7 +5,7 @@
             <img src="img//tutors-img.svg" alt="tutor" />
         </div>
         <p class="feedback-popup__name">Им’я Прізвище</p>
-        <div class="tutors-card__rate" data-stars="1"><i class="mentors__star fa-solid fa-star"></i><i
+        <div class="tutors-card__rate"><i class="mentors__star fa-solid fa-star"></i><i
                 class="mentors__star fa-regular fa-star"></i><i class="mentors__star fa-regular fa-star"></i><i
                 class="mentors__star fa-regular fa-star"></i><i class="mentors__star fa-regular fa-star"></i>
         </div>
@@ -26,4 +26,3 @@
         </div>
     </div>
 </div>
-<script src="js/star.js"></script>
