mentor info popup

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="css/feedback-page.css">
   <link rel="stylesheet" href="css/became-mentor-popup.css">
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/mentor-info-popup.css">
 </head>
 <title>N-Code</title>
 
@@ -968,6 +969,49 @@
   </body>
 
   </html>
+  <div class="popup mentor-info-popup">
+    <div class="popup-body">
+      <div class="popup__close"></div>
+      <div class="mentor-info-popup__top">
+        <div class="mentor-info-popup__img">
+          <img src="img//tutors-img.svg" alt="tutor">
+        </div>
+        <p class="mentor-info-popu__name">Им’я Прізвище</p>
+        <div class="tutors-card__rate"><i class="mentors__star fa-solid fa-star"></i><i
+            class="mentors__star fa-regular fa-star"></i><i class="mentors__star fa-regular fa-star"></i><i
+            class="mentors__star fa-regular fa-star"></i><i class="mentors__star fa-regular fa-star"></i>
+        </div>
+      </div>
+      <div class="mentor-info-popup__bottom">
+        <p>Що викладає ментор</p>
+        <div class="col">
+          <div class="mentor-info__block">
+            <p class="mentor-info-popup__title">З чим можу допомогти:</p>
+            <ul>
+              <li>- допоможу</li>
+              <li>- допоможу</li>
+              <li>- допоможу</li>
+              <li>- допоможу</li>
+              <li>- допоможу</li>
+              <li>- допоможу</li>
+              <li>- допоможу</li>
+            </ul>
+          </div>
+        </div>
+        <div class="col">
+          <div class="mentor-info__block">
+            <p class="mentor-info-popup__title">Про мене</p>
+            <p>Основна загальна інформація про викладача</p>
+          </div>
+          <div class="mentor-info__block">
+            <p class="mentor-info-popup__title">Досвід роботи</p>
+            <p>теперішнє місце роботи</p>
+            <p>попередні місця роботи</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
   <script src="js/nice-select2.js"></script>
   <script src="https://kit.fontawesome.com/53722d01cf.js" crossorigin="anonymous"></script>
   <script src="js/script.js"></script>
