--- a/index.html
+++ b/index.html
@@ -471,194 +471,153 @@
       </div>
       <div class="tutors-card__wrap">
         <div class="tutors-card">
-          <div class="tutors-card__top">
-            <div class="tutors-card__img">
-              <img src="img//tutors-img.svg" alt="tutor">
+            <div class="tutors-card__top">
+                <div class="tutors-card__img">
+                    <img src="img/feedback/woman.svg" alt="tutor">
+                </div>
+                <p class="tutors-card__name">Ольга</p>
+                <div class="tutors-card__rate"><i class="mentors__star fa-solid fa-star"></i><i
+                        class="mentors__star fa-solid fa-star"></i><i
+                        class="mentors__star fa-solid fa-star"></i><i
+                        class="mentors__star fa-solid fa-star"></i><i
+                        class="mentors__star fa-solid fa-star"></i>
+                </div>
             </div>
-            <p class="tutors-card__name">Им’я Прізвище</p>
-            <div class="tutors-card__rate"> <i class="mentors__star fa-solid fa-star"></i><i
-                class="mentors__star fa-regular fa-star"></i><i class="mentors__star fa-regular fa-star"></i><i
-                class="mentors__star fa-regular fa-star"></i><i class="mentors__star fa-regular fa-star"></i>
+            <div class="container">
+                <div class="tutors-card__info">
+                    <p class="tutors-card__description">
+                        Навчання в N-Code дуже сподобалось. Викладачі мають професійний підхід, дуже добре пояснюють матеріал...
+                    </p>
+                    <div class="tutors-card__course">
+                        <p>Курс:</p>
+                        <p>Front-End</p><a class="tutors-card__course-link more-info-link" href="">Відгук
+                            повністю</a>
+                    </div>
+                    <div class="tutors-card__tutor">
+                        <p>Викладач:</p>
+                        <p>Михайло Великосельський</p>
+                    </div>
+                </div>
             </div>
-          </div>
-          <div class="container">
-            <div class="tutors-card__info">
-              <p class="tutors-card__description">Текст відгуку студента, тут він вас хвалить. Текст відгуку студента,
-                тут він вас хвалить.Текст відгуку студента, тут він вас хвалить....</p>
-              <div class="tutors-card__course">
-                <p>Курс:</p>
-                <p>Назва курсу</p><a class="tutors-card__course-link more-info-link" href="">Відгук повністю</a>
-              </div>
-              <div class="tutors-card__tutor">
-                <p>Викладач:</p>
-                <p>Ім’я Прізвище</p>
-              </div>
-            </div>
-          </div>
         </div>
         <div class="tutors-card">
-          <div class="tutors-card__top">
-            <div class="tutors-card__img">
-              <img src="img//tutors-img.svg" alt="tutor">
+            <div class="tutors-card__top">
+                <div class="tutors-card__img">
+                    <img src="img/feedback/woman.svg" alt="tutor">
+                </div>
+                <p class="tutors-card__name">Юлия</p>
+                <div class="tutors-card__rate"><i class="mentors__star fa-solid fa-star"></i><i
+                        class="mentors__star fa-solid fa-star"></i><i
+                        class="mentors__star fa-solid fa-star"></i><i
+                        class="mentors__star fa-solid fa-star"></i><i
+                        class="mentors__star fa-solid fa-star"></i>
+                </div>
             </div>
-            <p class="tutors-card__name">Им’я Прізвище</p>
-            <div class="tutors-card__rate"> <i class="mentors__star fa-solid fa-star"></i><i
-                class="mentors__star fa-regular fa-star"></i><i class="mentors__star fa-regular fa-star"></i><i
-                class="mentors__star fa-regular fa-star"></i><i class="mentors__star fa-regular fa-star"></i>
+            <div class="container">
+                <div class="tutors-card__info">
+                    <p class="tutors-card__description">Отлично. Все нравится, все устраивает</p>
+                    <div class="tutors-card__course">
+                        <p>Курс:</p>
+                        <p>Front-End</p><a class="tutors-card__course-link more-info-link" href="">Відгук
+                            повністю</a>
+                    </div>
+                    <div class="tutors-card__tutor">
+                        <p>Викладач:</p>
+                        <p>Владислав Хаус</p>
+                    </div>
+                </div>
             </div>
-          </div>
-          <div class="container">
-            <div class="tutors-card__info">
-              <p class="tutors-card__description">Текст відгуку студента, тут він вас хвалить. Текст відгуку студента,
-                тут він вас хвалить.Текст відгуку студента, тут він вас хвалить....</p>
-              <div class="tutors-card__course">
-                <p>Курс:</p>
-                <p>Назва курсу</p><a class="tutors-card__course-link more-info-link" href="">Відгук повністю</a>
-              </div>
-              <div class="tutors-card__tutor">
-                <p>Викладач:</p>
-                <p>Ім’я Прізвище</p>
-              </div>
-            </div>
-          </div>
         </div>
         <div class="tutors-card">
-          <div class="tutors-card__top">
-            <div class="tutors-card__img">
-              <img src="img//tutors-img.svg" alt="tutor">
+            <div class="tutors-card__top">
+                <div class="tutors-card__img">
+                    <img src="img/feedback/man.svg" alt="tutor">
+                </div>
+                <p class="tutors-card__name">Денис</p>
+                <div class="tutors-card__rate"><i class="mentors__star fa-solid fa-star"></i><i
+                        class="mentors__star fa-solid fa-star"></i><i
+                        class="mentors__star fa-solid fa-star"></i><i
+                        class="mentors__star fa-solid fa-star"></i><i
+                        class="mentors__star fa-solid fa-star"></i>
+                </div>
             </div>
-            <p class="tutors-card__name">Им’я Прізвище</p>
-            <div class="tutors-card__rate"> <i class="mentors__star fa-solid fa-star"></i><i
-                class="mentors__star fa-regular fa-star"></i><i class="mentors__star fa-regular fa-star"></i><i
-                class="mentors__star fa-regular fa-star"></i><i class="mentors__star fa-regular fa-star"></i>
+            <div class="container">
+                <div class="tutors-card__info">
+                    <p class="tutors-card__description">3 навчанням все добре, мені все подобається. Репетитор класний, 
+                        все добре пояснює та навчає!)
+                    </p>
+                    <div class="tutors-card__course">
+                        <p>Курс:</p>
+                        <p>Front-End</p><a class="tutors-card__course-link more-info-link" href="">Відгук
+                            повністю</a>
+                    </div>
+                    <div class="tutors-card__tutor">
+                        <p>Викладач:</p>
+                        <p>Олексій Козаковський</p>
+                    </div>
+                </div>
             </div>
-          </div>
-          <div class="container">
-            <div class="tutors-card__info">
-              <p class="tutors-card__description">Текст відгуку студента, тут він вас хвалить. Текст відгуку студента,
-                тут він вас хвалить.Текст відгуку студента, тут він вас хвалить....</p>
-              <div class="tutors-card__course">
-                <p>Курс:</p>
-                <p>Назва курсу</p><a class="tutors-card__course-link more-info-link" href="">Відгук повністю</a>
-              </div>
-              <div class="tutors-card__tutor">
-                <p>Викладач:</p>
-                <p>Ім’я Прізвище</p>
-              </div>
-            </div>
-          </div>
         </div>
         <div class="tutors-card">
-          <div class="tutors-card__top">
-            <div class="tutors-card__img">
-              <img src="img//tutors-img.svg" alt="tutor">
+            <div class="tutors-card__top">
+                <div class="tutors-card__img">
+                    <img src="img/feedback/man.svg" alt="tutor">
+                </div>
+                <p class="tutors-card__name">Михайло</p>
+                <div class="tutors-card__rate"><i class="mentors__star fa-solid fa-star"></i><i
+                        class="mentors__star fa-solid fa-star"></i><i
+                        class="mentors__star fa-solid fa-star"></i><i
+                        class="mentors__star fa-solid fa-star"></i><i
+                        class="mentors__star fa-solid fa-star"></i>
+                </div>
             </div>
-            <p class="tutors-card__name">Им’я Прізвище</p>
-            <div class="tutors-card__rate"> <i class="mentors__star fa-solid fa-star"></i><i
-                class="mentors__star fa-regular fa-star"></i><i class="mentors__star fa-regular fa-star"></i><i
-                class="mentors__star fa-regular fa-star"></i><i class="mentors__star fa-regular fa-star"></i>
+            <div class="container">
+                <div class="tutors-card__info">
+                    <p class="tutors-card__description">Навчання йде не погано. Займаюсь з Сергієм, дуже хороший ментор. 
+                        Я людина, яка не говорить багато, взагалі мене все влаштовує</p>
+                    <div class="tutors-card__course">
+                        <p>Курс:</p>
+                        <p>Front-End</p><a class="tutors-card__course-link more-info-link" href="">Відгук
+                            повністю</a>
+                    </div>
+                    <div class="tutors-card__tutor">
+                        <p>Викладач:</p>
+                        <p>Сергій Популях</p>
+                    </div>
+                </div>
             </div>
-          </div>
-          <div class="container">
-            <div class="tutors-card__info">
-              <p class="tutors-card__description">Текст відгуку студента, тут він вас хвалить. Текст відгуку студента,
-                тут він вас хвалить.Текст відгуку студента, тут він вас хвалить....</p>
-              <div class="tutors-card__course">
-                <p>Курс:</p>
-                <p>Назва курсу</p><a class="tutors-card__course-link more-info-link" href="">Відгук повністю</a>
-              </div>
-              <div class="tutors-card__tutor">
-                <p>Викладач:</p>
-                <p>Ім’я Прізвище</p>
-              </div>
-            </div>
-          </div>
         </div>
         <div class="tutors-card">
-          <div class="tutors-card__top">
-            <div class="tutors-card__img">
-              <img src="img//tutors-img.svg" alt="tutor">
+            <div class="tutors-card__top">
+                <div class="tutors-card__img">
+                    <img src="img/feedback/woman.svg" alt="tutor">
+                </div>
+                <p class="tutors-card__name">Мама Олена</p>
+                <div class="tutors-card__rate"><i class="mentors__star fa-solid fa-star"></i><i
+                        class="mentors__star fa-solid fa-star"></i><i
+                        class="mentors__star fa-solid fa-star"></i><i
+                        class="mentors__star fa-solid fa-star"></i><i
+                        class="mentors__star fa-solid fa-star"></i>
+                </div>
             </div>
-            <p class="tutors-card__name">Им’я Прізвище</p>
-            <div class="tutors-card__rate"> <i class="mentors__star fa-solid fa-star"></i><i
-                class="mentors__star fa-regular fa-star"></i><i class="mentors__star fa-regular fa-star"></i><i
-                class="mentors__star fa-regular fa-star"></i><i class="mentors__star fa-regular fa-star"></i>
+            <div class="container">
+                <div class="tutors-card__info">
+                    <p class="tutors-card__description">Я мама студентки Мілани Кураса. Все дуже добре. 
+                        Подобається і вчитель і предмет.</p>
+                    <div class="tutors-card__course">
+                        <p>Курс:</p>
+                        <p>Front-End</p><a class="tutors-card__course-link more-info-link" href="">Відгук
+                            повністю</a>
+                    </div>
+                    <div class="tutors-card__tutor">
+                        <p>Викладач:</p>
+                        <p>Яна Паламарчук</p>
+                    </div>
+                </div>
             </div>
-          </div>
-          <div class="container">
-            <div class="tutors-card__info">
-              <p class="tutors-card__description">Текст відгуку студента, тут він вас хвалить. Текст відгуку студента,
-                тут він вас хвалить.Текст відгуку студента, тут він вас хвалить....</p>
-              <div class="tutors-card__course">
-                <p>Курс:</p>
-                <p>Назва курсу</p><a class="tutors-card__course-link more-info-link" href="">Відгук повністю</a>
-              </div>
-              <div class="tutors-card__tutor">
-                <p>Викладач:</p>
-                <p>Ім’я Прізвище</p>
-              </div>
-            </div>
-          </div>
         </div>
-        <div class="tutors-card">
-          <div class="tutors-card__top">
-            <div class="tutors-card__img">
-              <img src="img//tutors-img.svg" alt="tutor">
-            </div>
-            <p class="tutors-card__name">Им’я Прізвище</p>
-            <div class="tutors-card__rate"> <i class="mentors__star fa-solid fa-star"></i><i
-                class="mentors__star fa-regular fa-star"></i><i class="mentors__star fa-regular fa-star"></i><i
-                class="mentors__star fa-regular fa-star"></i><i class="mentors__star fa-regular fa-star"></i>
-            </div>
-          </div>
-          <div class="container">
-            <div class="tutors-card__info">
-              <p class="tutors-card__description">Текст відгуку студента, тут він вас хвалить. Текст відгуку студента,
-                тут він вас хвалить.Текст відгуку студента, тут він вас хвалить....</p>
-              <div class="tutors-card__course">
-                <p>Курс:</p>
-                <p>Назва курсу</p><a class="tutors-card__course-link more-info-link" href="">Відгук повністю</a>
-              </div>
-              <div class="tutors-card__tutor">
-                <p>Викладач:</p>
-                <p>Ім’я Прізвище</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="tutors-card">
-          <div class="tutors-card__top">
-            <div class="tutors-card__img">
-              <img src="img//tutors-img.svg" alt="tutor">
-            </div>
-            <p class="tutors-card__name">Им’я Прізвище</p>
-            <div class="tutors-card__rate"> <i class="mentors__star fa-solid fa-star"></i><i
-                class="mentors__star fa-regular fa-star"></i><i class="mentors__star fa-regular fa-star"></i><i
-                class="mentors__star fa-regular fa-star"></i><i class="mentors__star fa-regular fa-star"></i>
-            </div>
-          </div>
-          <div class="container">
-            <div class="tutors-card__info">
-              <p class="tutors-card__description">Текст відгуку студента, тут він вас хвалить. Текст відгуку студента,
-                тут він вас хвалить.Текст відгуку студента, тут він вас хвалить....</p>
-              <div class="tutors-card__course">
-                <p>Курс:</p>
-                <p>Назва курсу</p><a class="tutors-card__course-link more-info-link" href="">Відгук повністю</a>
-              </div>
-              <div class="tutors-card__tutor">
-                <p>Викладач:</p>
-                <p>Ім’я Прізвище</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="tutors-card action-btn give-feedback">
-          <div class="tutors-card__img">
-            <img src="./img/add-ico-orange.svg" alt="">
-          </div>
-          <p>Залишити відгук</p>
-        </div>
-      </div><a class="mob_btn btn" href="#">Дивитись всі відгуки</a>
+    </div>
+      <a class="mob_btn btn" href="#">Дивитись всі відгуки</a>
       <div class="btn-wrap"><a class="btn_light btn" href="#">Замовити сертифікат</a><a class="btn" href="#">Отримати
           консультацію менеджера</a>
       </div>
@@ -848,32 +807,28 @@
   </footer>
   <div class="popup feedback-popup">
     <div class="popup-body">
-      <div class="popup__close"></div>
-      <div class="feedback-popup__img">
-        <img src="img//tutors-img.svg" alt="tutor">
-      </div>
-      <p class="feedback-popup__name">Им’я Прізвище</p>
-      <div class="tutors-card__rate"><i class="mentors__star fa-solid fa-star"></i><i
-          class="mentors__star fa-regular fa-star"></i><i class="mentors__star fa-regular fa-star"></i><i
-          class="mentors__star fa-regular fa-star"></i><i class="mentors__star fa-regular fa-star"></i>
-      </div>
-      <p class="feedback-popup__text">Текст відгуку студента, тут він вас хвалить. Текст відгуку студента, тут він вас
-        хвалить.Текст відгуку студента, тут він вас хвалить Текст відгуку студента, тут він вас хвалить. Текст відгуку
-        студента, тут він вас хвалить.Текст відгуку студента,
-        тут він вас хвалить Текст відгуку студента, тут він вас хвалить. Текст відгуку студента, тут він вас
-        хвалить.Текст відгуку студента, тут він вас хвалить Текст відгуку студента, тут він вас хвалить. Текст відгуку
-        студента, тут він вас хвалить.Текст
-        відгуку студента, тут він вас хвалить</p>
-      <div class="feedback-popup__item">
-        <p>Курс:</p>
-        <p>Назва курсу</p>
-      </div>
-      <div class="feedback-popup__item">
-        <p>Викладач:</p>
-        <p>Ім’я Прізвище</p>
-      </div>
+        <div class="popup__close"></div>
+        <div class="feedback-popup__img">
+            <img src="img/feedback/woman.svg" alt="tutor" />
+        </div>
+        <p class="feedback-popup__name">Ольга</p>
+        <div class="tutors-card__rate"><i class="mentors__star fa-solid fa-star"></i><i
+                class="mentors__star fa-solid fa-star"></i><i class="mentors__star fa-solid fa-star"></i><i
+                class="mentors__star fa-solid fa-star"></i><i class="mentors__star fa-solid fa-star"></i>
+        </div>
+        <p class="feedback-popup__text">Навчання в N-Code дуже сподобалось. Викладачі мають професійний підхід, 
+            дуже добре пояснюють матеріал, доброзичливі. 
+            Графік навчань гнучкий, що дуже зручно. Я цілком задоволена навчанням))</p>
+        <div class="feedback-popup__item">
+            <p>Курс:</p>
+            <p>Front-End</p>
+        </div>
+        <div class="feedback-popup__item">
+            <p>Викладач:</p>
+            <p>Михайло Великосельський</p>
+        </div>
     </div>
-  </div>
+</div>
   <div class="popup give-feedback-popup popap-templ">
     <div class="popup-body">
       <div class="popup__close"></div>
