--- a/feedback.html
+++ b/feedback.html
@@ -76,7 +76,7 @@
             <h2 class="section-title">Всi вiдгуки</h2>
         </div>
         <div class="tutors-card__wrap">
-            <div class="tutors-card">
+            <div class="tutors-card" >
                 <div class="tutors-card__top">
                     <div class="tutors-card__img">
                         <img src="img/feedback/woman.svg" alt="tutor">
@@ -96,7 +96,7 @@
                         </p>
                         <div class="tutors-card__course">
                             <p>Курс:</p>
-                            <p>Front-End</p><a class="tutors-card__course-link more-info-link" href="">Відгук
+                            <p>Front-End</p><a class="tutors-card__course-link more-info-link" href="" data-trigger="1">Відгук
                                 повністю</a>
                         </div>
                         <div class="tutors-card__tutor">
@@ -124,7 +124,7 @@
                         <p class="tutors-card__description">Отлично. Все нравится, все устраивает</p>
                         <div class="tutors-card__course">
                             <p>Курс:</p>
-                            <p>Front-End</p><a class="tutors-card__course-link more-info-link" href="">Відгук
+                            <p>Front-End</p><a class="tutors-card__course-link more-info-link" data-trigger="2">Відгук
                                 повністю</a>
                         </div>
                         <div class="tutors-card__tutor">
@@ -154,7 +154,7 @@
                         </p>
                         <div class="tutors-card__course">
                             <p>Курс:</p>
-                            <p>Front-End</p><a class="tutors-card__course-link more-info-link" href="">Відгук
+                            <p>Front-End</p><a class="tutors-card__course-link more-info-link" data-trigger="3">Відгук
                                 повністю</a>
                         </div>
                         <div class="tutors-card__tutor">
@@ -164,7 +164,7 @@
                     </div>
                 </div>
             </div>
-            <div class="tutors-card">
+            <div class="tutors-card" >
                 <div class="tutors-card__top">
                     <div class="tutors-card__img">
                         <img src="img/feedback/man.svg" alt="tutor">
@@ -183,7 +183,7 @@
                             Я людина, яка не говорить багато, взагалі мене все влаштовує</p>
                         <div class="tutors-card__course">
                             <p>Курс:</p>
-                            <p>Front-End</p><a class="tutors-card__course-link more-info-link" href="">Відгук
+                            <p>Front-End</p><a class="tutors-card__course-link more-info-link" data-trigger="4">Відгук
                                 повністю</a>
                         </div>
                         <div class="tutors-card__tutor">
@@ -193,7 +193,7 @@
                     </div>
                 </div>
             </div>
-            <div class="tutors-card">
+            <div class="tutors-card" >
                 <div class="tutors-card__top">
                     <div class="tutors-card__img">
                         <img src="img/feedback/woman.svg" alt="tutor">
@@ -212,7 +212,7 @@
                             Подобається і вчитель і предмет.</p>
                         <div class="tutors-card__course">
                             <p>Курс:</p>
-                            <p>Front-End</p><a class="tutors-card__course-link more-info-link" href="">Відгук
+                            <p>Front-End</p><a class="tutors-card__course-link more-info-link" data-trigger="5">Відгук
                                 повністю</a>
                         </div>
                         <div class="tutors-card__tutor">
@@ -370,10 +370,10 @@
                 </select>
                 <div class="form-rate required">
                     <div class="tutors-card__rate" data-stars="1"><i class="mentors__star fa-solid fa-star"></i><i
-                            class="mentors__star fa-regular fa-star"></i><i
-                            class="mentors__star fa-regular fa-star"></i><i
-                            class="mentors__star fa-regular fa-star"></i><i
-                            class="mentors__star fa-regular fa-star"></i>
+                            class="mentors__star fa-solid fa-star"></i><i
+                            class="mentors__star fa-solid fa-star"></i><i
+                            class="mentors__star fa-solid fa-star"></i><i
+                            class="mentors__star fa-solid fa-star"></i>
                     </div>
                 </div>
                 <label class="required" for="social">
@@ -388,31 +388,140 @@
     </div>
     <script src="js/star.js"></script>
     <script src="js/nice-select2.js"></script>
-    <div class="popup feedback-popup">
+    <div class="popup feedback-popup" data-content="1">
         <div class="popup-body">
             <div class="popup__close"></div>
             <div class="feedback-popup__img">
-                <img src="img//tutors-img.svg" alt="tutor">
+                <img src="img/feedback/woman.svg" alt="tutor">
             </div>
-            <p class="feedback-popup__name">Им’я Прізвище</p>
+            <p class="feedback-popup__name">Ольга</p>
             <div class="tutors-card__rate"><i class="mentors__star fa-solid fa-star"></i><i
-                    class="mentors__star fa-regular fa-star"></i><i class="mentors__star fa-regular fa-star"></i><i
-                    class="mentors__star fa-regular fa-star"></i><i class="mentors__star fa-regular fa-star"></i>
+                    class="mentors__star fa-solid fa-star"></i><i class="mentors__star fa-solid fa-star"></i><i
+                    class="mentors__star fa-solid fa-star"></i><i class="mentors__star fa-solid fa-star"></i>
             </div>
-            <p class="feedback-popup__text">Текст відгуку студента, тут він вас хвалить. Текст відгуку студента, тут він
-                вас хвалить.Текст відгуку студента, тут він вас хвалить Текст відгуку студента, тут він вас хвалить.
-                Текст відгуку студента, тут він вас хвалить.Текст відгуку студента,
-                тут він вас хвалить Текст відгуку студента, тут він вас хвалить. Текст відгуку студента, тут він вас
-                хвалить.Текст відгуку студента, тут він вас хвалить Текст відгуку студента, тут він вас хвалить. Текст
-                відгуку студента, тут він вас хвалить.Текст
-                відгуку студента, тут він вас хвалить</p>
+            <p class="feedback-popup__text">Навчання в N-Code дуже сподобалось. Викладачі мають професійний підхід, дуже добре 
+                пояснюють матеріал, доброзичливі. 
+                Графік навчань гнучкий, що дуже зручно. Я цілком задоволена навчанням))</p>
             <div class="feedback-popup__item">
                 <p>Курс:</p>
-                <p>Назва курсу</p>
+                <p>Front-End</p>
             </div>
             <div class="feedback-popup__item">
                 <p>Викладач:</p>
-                <p>Ім’я Прізвище
+                <p>Михайло Великосельський
+                    <script src="js/nice-select2.js"></script>
+                    <script src="https://kit.fontawesome.com/53722d01cf.js" crossorigin="anonymous"></script>
+                    <script src="js/popup.js">
+                    </script>
+                    <script src="js/script.js"></script>
+                </p>
+            </div>
+        </div>
+    </div>
+    <div class="popup feedback-popup" data-content="2">
+        <div class="popup-body">
+            <div class="popup__close"></div>
+            <div class="feedback-popup__img">
+                <img src="img/feedback/woman.svg" alt="tutor">
+            </div>
+            <p class="feedback-popup__name">Юлия</p>
+            <div class="tutors-card__rate"><i class="mentors__star fa-solid fa-star"></i><i
+                    class="mentors__star fa-solid fa-star"></i><i class="mentors__star fa-solid fa-star"></i><i
+                    class="mentors__star fa-solid fa-star"></i><i class="mentors__star fa-solid fa-star"></i>
+            </div>
+            <p class="feedback-popup__text">Отлично. Все нравится, все устраивает </p>
+            <div class="feedback-popup__item">
+                <p>Курс:</p>
+                <p>Front-End</p>
+            </div>
+            <div class="feedback-popup__item">
+                <p>Викладач:</p>
+                <p>Владислав Хаус
+                    <script src="js/nice-select2.js"></script>
+                    <script src="https://kit.fontawesome.com/53722d01cf.js" crossorigin="anonymous"></script>
+                    <script src="js/popup.js">
+                    </script>
+                    <script src="js/script.js"></script>
+                </p>
+            </div>
+        </div>
+    </div>
+    <div class="popup feedback-popup" data-content="3">
+        <div class="popup-body">
+            <div class="popup__close"></div>
+            <div class="feedback-popup__img">
+                <img src="img/feedback/man.svg" alt="tutor">
+            </div>
+            <p class="feedback-popup__name">Денис</p>
+            <div class="tutors-card__rate"><i class="mentors__star fa-solid fa-star"></i><i
+                    class="mentors__star fa-solid fa-star"></i><i class="mentors__star fa-solid fa-star"></i><i
+                    class="mentors__star fa-solid fa-star"></i><i class="mentors__star fa-solid fa-star"></i>
+            </div>
+            <p class="feedback-popup__text">3 навчанням все добре, мені все подобається. Репетитор класний, все добре пояснює та навчає!)</p>
+            <div class="feedback-popup__item">
+                <p>Курс:</p>
+                <p>Front-End</p>
+            </div>
+            <div class="feedback-popup__item">
+                <p>Викладач:</p>
+                <p>Олексій Козаковський
+                    <script src="js/nice-select2.js"></script>
+                    <script src="https://kit.fontawesome.com/53722d01cf.js" crossorigin="anonymous"></script>
+                    <script src="js/popup.js">
+                    </script>
+                    <script src="js/script.js"></script>
+                </p>
+            </div>
+        </div>
+    </div>
+    <div class="popup feedback-popup" data-content="4">
+        <div class="popup-body">
+            <div class="popup__close"></div>
+            <div class="feedback-popup__img">
+                <img src="img/feedback/man.svg" alt="tutor">
+            </div>
+            <p class="feedback-popup__name">Михайло</p>
+            <div class="tutors-card__rate"><i class="mentors__star fa-solid fa-star"></i><i
+                    class="mentors__star fa-solid fa-star"></i><i class="mentors__star fa-solid fa-star"></i><i
+                    class="mentors__star fa-solid fa-star"></i><i class="mentors__star fa-solid fa-star"></i>
+            </div>
+            <p class="feedback-popup__text">Навчання йде не погано. Займаюсь з Сергієм, дуже хороший ментор. 
+                Я людина, яка не говорить багато, взагалі мене все влаштовує</p>
+            <div class="feedback-popup__item">
+                <p>Курс:</p>
+                <p>Front-End</p>
+            </div>
+            <div class="feedback-popup__item">
+                <p>Викладач:</p>
+                <p>Сергій Популях
+                    <script src="js/nice-select2.js"></script>
+                    <script src="https://kit.fontawesome.com/53722d01cf.js" crossorigin="anonymous"></script>
+                    <script src="js/popup.js">
+                    </script>
+                    <script src="js/script.js"></script>
+                </p>
+            </div>
+        </div>
+    </div>
+    <div class="popup feedback-popup" data-content="5">
+        <div class="popup-body">
+            <div class="popup__close"></div>
+            <div class="feedback-popup__img">
+                <img src="img/feedback/woman.svg" alt="tutor">
+            </div>
+            <p class="feedback-popup__name">Мілана Кураса</p>
+            <div class="tutors-card__rate"><i class="mentors__star fa-solid fa-star"></i><i
+                    class="mentors__star fa-solid fa-star"></i><i class="mentors__star fa-solid fa-star"></i><i
+                    class="mentors__star fa-solid fa-star"></i><i class="mentors__star fa-solid fa-star"></i>
+            </div>
+            <p class="feedback-popup__text">Все дуже добре. Подобається і вчитель і предмет.</p>
+            <div class="feedback-popup__item">
+                <p>Курс:</p>
+                <p>Front-End</p>
+            </div>
+            <div class="feedback-popup__item">
+                <p>Викладач:</p>
+                <p>Яна Паламарчук
                     <script src="js/nice-select2.js"></script>
                     <script src="https://kit.fontawesome.com/53722d01cf.js" crossorigin="anonymous"></script>
                     <script src="js/popup.js">
