added redirect function

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           </li>
           <li class="menu__item"><a href="#">Контакти</a>
           </li>
-          <li class="menu__item"><a href="#">Кабiнет</a>
+          <li class="menu__item"><a href="#" class="cabinet-link">Кабiнет</a>
           </li>
         </ul>
         <div class="header__items"><a class="phone" href="tel:+380670000000">+380670000000</a>
@@ -67,7 +67,7 @@
         </li>
         <li class="menu__item"><a href="#">Контакти </a>
         </li>
-        <li class="menu__item"><a href="#">Кабiнет</a>
+        <li class="menu__item"><a href="#" class="cabinet-link">Кабiнет</a>
         </li>
       </ul>
     </div>
