--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           </div>
         </div>
         <ul class="menu__nav">
-          <li class="menu__item"><a href="index.html">Головна</a>
+          <li class="menu__item"><a href="#">Головна</a>
           </li>
           <li class="menu__item"><a href="#">Про нас</a>
           </li>
@@ -61,7 +61,7 @@
         </div>
       </div>
       <ul class="menu__nav">
-        <li class="menu__item"><a href="/">Головна</a>
+        <li class="menu__item"><a href="#">Головна</a>
         </li>
         <li class="menu__item"><a href="#">Про нас</a>
         </li>
