--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <ul class="menu__nav">
           <li class="menu__item"><a href="#">Головна</a>
           </li>
-          <li class="menu__item"><a href="#">Про нас</a>
+          <li class="menu__item"><a href="about-us.html">Про нас</a>
           </li>
           <li class="menu__item"><a href="#">Контакти</a>
           </li>
@@ -63,7 +63,7 @@
       <ul class="menu__nav">
         <li class="menu__item"><a href="#">Головна</a>
         </li>
-        <li class="menu__item"><a href="#">Про нас</a>
+        <li class="menu__item"><a href="about-us.html">Про нас</a>
         </li>
         <li class="menu__item"><a href="#">Контакти </a>
         </li>
@@ -800,7 +800,7 @@
       <div class="footer__mob-top">
         <p class="footer__title">Школа
           <ul class="footer__list">
-            <li><a href="index.html">Про нас</a>
+            <li><a href="abous-us.html">Про нас</a>
             </li>
             <li><a href="tutors.html">Викладачі</a>
             </li>
