--- a/about-us.html
+++ b/about-us.html
@@ -43,23 +43,11 @@
                 </ul>
                 <div class="header__items"><a class="phone" href="tel:+380670000000">+380670000000</a>
                   <div class="items-wrap"><a class="action-btn btn btn_blue" href="#callback-form">Замовити дзвінок</a>
-                    <div class="language">
-                      <div class="language__ico">
-                        <img src="img/ukraine.svg" alt="ukraine">
-                      </div>
-                    </div>
                   </div>
                 </div>
               </menu>
             </div>
             <div class="mob-menu">
-              <div class="header__items">
-                <div class="language">
-                  <div class="language__ico">
-                    <img src="img/ukraine.svg" alt="ukraine">
-                  </div>
-                </div>
-              </div>
               <ul class="menu__nav">
                 <li class="menu__item"><a href="#">Головна</a>
                 </li>
@@ -79,9 +67,48 @@
             <p>N-Code - це команда професіоналів, яка була заснована в Україні 1 червня 2023 року, та ставить перед собою 
                 завдання надавати якісну онлайн освіту та сприяти успіху своїх студентів.
             </p>
+            <br>
             <p>Ми працюємо над тим, щоб навчання в IT стало доступним, цікавим та ефективним для всіх, хто бажає розвиватися у 
             цій галузі. Наші студенти проходять навчання із застосуванням онлайн платформи яку ми самостійно розробили та 
             адаптували під потреби процесу опанування нових знань.</p>
+            <span class="list-title">Основні переваги, які надає N-Code:</span>
+            <ol class="list-advantages">
+                <li>
+                    <span class="li-title">Гнучкість навчання:</span>
+                    <p>Наша онлайн платформа дозволяє студентам планувати свій власний графік навчання, 
+                        враховуючи їхні особисті обов'язки та ритм життя.</p>
+                </li>
+                <li>
+                    <span class="li-title">Індивідуальний підхід:</span>
+                    <p>Ми надаємо особистих репетиторів-наставників для кожного студента, що допомагає забезпечити 
+                        індивідуальну підтримку та успішний процес навчання.</p>
+                </li>
+                <li>
+                    <span class="li-title">Різноманітність напрямків навчання:</span>
+                    <p>Ми пропонуємо широкий вибір курсів, адаптованих під різні напрямки та рівні складності, 
+                        щоб задовольнити потреби різних студентів.</p>
+                </li>
+                <li>
+                    <span class="li-title">Актуальність матеріалів:</span>
+                    <p>Ми постійно оновлюємо наші курси, щоб враховувати останні тенденції та новітні інструменти в галузі IT.</p>
+                </li>
+                <li>
+                    <span class="li-title">Спільнота професіоналів:</span>
+                    <p>В N-Code ви будете частиною спільноти амбітних студентів та 
+                        досвідчених практикуючих спеціалістів-наставників, що стимулює навчання та обмін знаннями.</p>
+                </li>
+                <li>
+                    <span class="li-title">Практичний підхід:</span>
+                    <p>Наші курси спрямовані на практичні навички, тому ми навчаємо за принципом 20% теорії та 80% практики.</p>
+                </li>
+                <li>
+                    <span class="li-title">Кар'єрна підтримка:</span>
+                    <p>Ми надаємо додаткову підтримку студентам у пошуку роботи та розвитку кар'єри, забезпечуючи їм 
+                        необхідні інструменти та ресурси.</p>
+                </li>
+            </ol>
+            <p class="text">Компанія N-Code - молода та проактивна організація, яка ставить за мету формування інноваційного освітнього середовища</p>
+            <p class="conclusion">Успіхи наших студентів -  найголовніша мотивація і рушійна сила нашого проєкту!</p>
         </div>
     </div>
     <footer class="footer">
