change feedback name

--- a/index.html
+++ b/index.html
@@ -1092,12 +1092,12 @@
         <div class="feedback-popup__img">
             <img src="img/feedback/woman.svg" alt="tutor">
         </div>
-        <p class="feedback-popup__name">Мілана Кураса</p>
+        <p class="feedback-popup__name">Мама Олена</p>
         <div class="tutors-card__rate"><i class="mentors__star fa-solid fa-star"></i><i
                 class="mentors__star fa-solid fa-star"></i><i class="mentors__star fa-solid fa-star"></i><i
                 class="mentors__star fa-solid fa-star"></i><i class="mentors__star fa-solid fa-star"></i>
         </div>
-        <p class="feedback-popup__text">Все дуже добре. Подобається і вчитель і предмет.</p>
+        <p class="feedback-popup__text">Я мама студентки Мілани Кураса. Все дуже добре. Подобається і вчитель і предмет.</p>
         <div class="feedback-popup__item">
             <p>Курс:</p>
             <p>Front-End</p>
